--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,13 @@
   "devtools_page": "main.html",
 
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
-  "web_accessible_resources": [ "main.html", "views/devpanel.html" ]
+  "web_accessible_resources": [ "main.html", "views/devpanel.html" ],
+
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["document_start.js"],
+      "run_at": "document_start"
+    }
+  ]
 }
