--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "blink"]
 	path = blink
-	url = git@github.com:sebmarkbage/blink-devtools.git
+	url = https://github.com/sebmarkbage/blink-devtools.git
