--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["document_start.js"],
+      "js": ["injected/GlobalHook.js"],
       "run_at": "document_start"
     }
   ]
