--- a/plugins/bananaslug/package.json
+++ b/plugins/bananaslug/package.json
@@ -6,7 +6,14 @@
   "dependencies": {
     "babel-core": "^4.7.16",
     "babel-loader": "^4.3.0",
+    "eslint": "^0.18.0",
+    "eslint-loader": "^0.9.0",
     "webpack": "^1.7.3"
   },
-  "author": "hedgerwang"
+  "author": "hedgerwang",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "license": "ISC"
 }
