--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
       "matches": ["<all_urls>"],
       "js": [
         "injected/GlobalHook.js",
-        "plugins/bananaslug/build/content-script.js"
+        "plugins/bananaslug/build/content-script.bundle.js"
       ],
       "run_at": "document_start"
     }
