--- a/plugins/bananaslug/.eslintrc
+++ b/plugins/bananaslug/.eslintrc
@@ -19,6 +19,7 @@
     "comma-dangle": 0,
     "no-console": 0,
     "no-debugger": 0,
+    "no-empty": 0,
     "no-underscore-dangle": 0,
     "quotes": "[2, single]",
     "strict": 0,
