--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "React Developer Tools",
+  "name": "(hedger) React Developer Tools",
   "description": "Adds React debugging tools to the Chrome Developer Tools.",
   "version": "0.13.0",
   "icons": {
