--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "(hedger) React Developer Tools",
+  "name": "React Developer Tools",
   "description": "Adds React debugging tools to the Chrome Developer Tools.",
-  "version": "0.13.0",
+  "version": "0.13.1",
   "icons": {
     "16": "icons/icon16.png", "48": "icons/icon48.png", "128": "icons/icon128.png"
   },
