moving lots of things around and flowtypes

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-/test/build
-/node_modules
 *.swp
-/chrome/build
-firefox/build
-firefox/data/build
-electron/build
-electron/node_modules
-/chrome.crx
-/chrome.pem
+/node_modules
+/test/build
+/shells/chrome/build
+/shells/firefox/build
+/shells/firefox/data/build
+/shells/electron/build
+/shells/electron/node_modules
+/shells/chrome.crx
+/shells/chrome.pem
+/shells/plain/build
+/plugins/node_modules
