chrome plugin is fully building

--- a/shells/chrome/manifest.json
+++ b/shells/chrome/manifest.json
@@ -9,10 +9,10 @@
   "devtools_page": "main.html",
 
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
-  "web_accessible_resources": [ "main.html", "panel.html", "build/backend.js", "reporter.html" ],
+  "web_accessible_resources": [ "main.html", "panel.html", "build/backend.js"],
 
   "background": {
-    "scripts": [ "background.js" ],
+    "scripts": [ "./build/background.js" ],
     "persistent": false
   },
 
@@ -25,7 +25,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["injected/GlobalHook.js"],
+      "js": ["./build/inject.js"],
       "run_at": "document_start"
     }
   ]
