--- a/shells/firefox/package.json
+++ b/shells/firefox/package.json
@@ -3,7 +3,7 @@
   "name": "react-devtools",
   "version": "0.0.1",
   "description": "Extend the devtools to help you debug and develop react apps",
-  "main": "index.js",
+  "main": "main/index.js",
   "author": "Facebook",
   "engines": {
     "firefox": ">=38.0a1"
