--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "classnames": "^2.1.2",
+    "es6-symbol": "^2.0.1",
     "immutable": "^3.7.4",
     "object-assign": "^3.0.0",
     "react": "^0.13.3"
