--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "object-assign": "^3.0.0",
     "react": "^0.13.3"
   },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "testFileExtensions": ["es6", "js"],
+    "moduleFileExtensions": ["js", "json", "es6"]
+  },
   "devDependencies": {
     "babel-core": "^5.5.8",
+    "babel-jest": "^5.3.0",
     "babel-loader": "^5.1.4",
+    "jest-cli": "^0.4.15",
     "json-loader": "^0.5.2",
     "node-libs-browser": "^0.5.2",
     "webpack": "^1.9.10"
