--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.swp
+*.swo
 /node_modules
 /test/build
 /shells/chrome/build
@@ -10,10 +11,9 @@
 /shells/chrome.pem
 /shells/plain/build
 /plugins/node_modules
-*.swo
-backend/__tests__/node_modules
-backend/__tests__/v0.11/node_modules
-backend/__tests__/v0.12/node_modules
-backend/__tests__/v0.13/node_modules
-backend/__tests__/v0.14/node_modules
-backend/__tests__/build
+/backend/integration/node_modules
+/backend/integration/v0.11/node_modules
+/backend/integration/v0.12/node_modules
+/backend/integration/v0.13/node_modules
+/backend/integration/v0.14/node_modules
+/backend/integration/build
