--- a/backend/integration/package.json
+++ b/backend/integration/package.json
@@ -3,6 +3,6 @@
     "babelify": "^6.1.3",
     "tap-browser-color": "^0.1.2",
     "tape": "^4.0.1",
-    "tape-catch": "^1.0.4",
+    "tape-catch": "^1.0.4"
   }
 }
