clean up the readme

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /backend/integration/v0.13/node_modules
 /backend/integration/v0.14/node_modules
 /backend/integration/build
+shells/firefox/*.xpi
