Added npm script for building chrome's shell and fixed the webpack config to work despite the directory where its being called

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^0.13.3"
   },
   "scripts": {
+    "build-chrome": "webpack --config shells/chrome/webpack.config.js",
     "lint": "./node_modules/.bin/eslint .",
     "test": "node --harmony ./node_modules/.bin/jest"
   },
