fix installation of react versions in travis

--- a/backend/integration/Makefile
+++ b/backend/integration/Makefile
@@ -1,4 +1,9 @@
 
+install:
+	for version in v0*; do\
+		(cd $$version;npm install);\
+	done;
+
 test:
 	browserify -t babelify is-travis.js attach-0.11.js|tape-run
 	browserify -t babelify is-travis.js attach-0.12.js|tape-run
