--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /backend/integration/v0.14/node_modules
 /backend/integration/build
 /shells/firefox/*.xpi
+/shells/chrome/custom-babel-helpers.js
