--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "classnames": "^2.1.2",
     "es6-symbol": "^2.0.1",
+    "fbjs-scripts": "^0.2.0",
     "immutable": "^3.7.4",
     "object-assign": "^3.0.0",
     "react": "^0.13.3"
@@ -24,10 +25,10 @@
   },
   "devDependencies": {
     "babel-core": "^5.5.8",
-    "babel-eslint": "^3.1.23",
+    "babel-eslint": "^4.1.1",
     "babel-jest": "^5.3.0",
     "babel-loader": "^5.1.4",
-    "eslint": "^0.24.1",
+    "eslint": "^1.3.1",
     "eslint-plugin-react": "^3.0.0",
     "jest-cli": "^0.5.0",
     "json-loader": "^0.5.2",
