--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "fbjs-scripts": "0.2.1",
     "immutable": "^3.7.4",
     "object-assign": "^3.0.0",
-    "react": "^0.13.3"
+    "react": "^0.14.2",
+    "react-addons-create-fragment": "^0.14.2",
+    "react-dom": "^0.14.2"
   },
   "license": "BSD-3-Clause",
   "repository": "facebook/react-devtools",
