Add support for Firefox private browsing
Without this, the React tab would still show up, but it stays stuck on
"Connecting to devtools"

Documentation for the "permissions" key can be found at:
https://developer.mozilla.org/en-US/Add-ons/SDK/Tools/package_json#permissions

--- a/shells/firefox/package.json
+++ b/shells/firefox/package.json
@@ -8,5 +8,8 @@
   "engines": {
     "firefox": ">=38.0a1"
   },
-  "license": "BSD-3-Clause"
+  "license": "BSD-3-Clause",
+  "permissions": {
+    "private-browsing": true
+  }
 }
