--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "repository": "facebook/react-devtools",
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
-    "test": "node --harmony ./node_modules/.bin/jest --verbose"
+    "test": "jest --verbose",
+    "typecheck": "flow check"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
@@ -32,6 +33,7 @@
     "babel-loader": "^5.1.4",
     "eslint": "^1.3.1",
     "eslint-plugin-react": "^3.0.0",
+    "flow-bin": "0.15.0",
     "jest-cli": "^0.5.0",
     "json-loader": "^0.5.2",
     "node-libs-browser": "^0.5.2",
