--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "classnames": "^2.1.2",
     "es6-symbol": "^2.0.1",
-    "fbjs-scripts": "^0.2.0",
+    "fbjs-scripts": "0.2.1",
     "immutable": "^3.7.4",
     "object-assign": "^3.0.0",
     "react": "^0.13.3"
@@ -28,11 +28,11 @@
   },
   "devDependencies": {
     "babel-core": "^5.5.8",
-    "babel-eslint": "^4.1.1",
+    "babel-eslint": "^4.1.3",
     "babel-jest": "^5.3.0",
     "babel-loader": "^5.1.4",
-    "eslint": "^1.3.1",
-    "eslint-plugin-react": "^3.0.0",
+    "eslint": "^1.5.1",
+    "eslint-plugin-react": "^3.5.0",
     "flow-bin": "0.16.0",
     "jest-cli": "^0.5.0",
     "json-loader": "^0.5.2",
