--- a/package.json
+++ b/package.json
@@ -43,5 +43,19 @@
       "json",
       "es6"
     ]
+  },
+  "devDependencies": {
+    "babel-core": "^5.5.8",
+    "babel-eslint": "^4.1.3",
+    "babel-jest": "^5.3.0",
+    "babel-loader": "^5.1.4",
+    "eslint": "^1.5.1",
+    "eslint-plugin-react": "^3.5.0",
+    "flow-bin": "0.17.0",
+    "jest-cli": "^0.5.0",
+    "json-loader": "^0.5.2",
+    "node-libs-browser": "^0.5.2",
+    "raw-loader": "^0.5.1",
+    "webpack": "^1.9.10"
   }
 }
