--- a/.flowconfig
+++ b/.flowconfig
@@ -4,6 +4,7 @@
 .*node_modules/json-loader.*
 .*node_modules/node-libs-browser.*
 .*node_modules/webpack.*
+.*node_modules/fbjs/flow.*
 
 [libs]
 flow
