--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
     "classnames": "^2.1.2",
     "es6-symbol": "^2.0.1",
     "fbjs": "^0.4.0",
-    "fbjs-scripts": "0.4.0",
+    "fbjs-scripts": "0.5.0",
     "immutable": "^3.7.4",
     "object-assign": "^3.0.0",
     "react": "^0.14.2",
@@ -30,10 +33,10 @@
     ]
   },
   "devDependencies": {
-    "babel-core": "^5.5.8",
+    "babel-core": "^6.1.19",
     "babel-eslint": "^4.1.3",
-    "babel-jest": "^5.3.0",
-    "babel-loader": "^5.1.4",
+    "babel-jest": "^6.0.1",
+    "babel-loader": "^6.1.0",
     "eslint": "^1.5.1",
     "eslint-plugin-react": "^3.5.0",
     "flow-bin": "0.18.1",
