update version and name.

--- a/shells/chrome/manifest.json
+++ b/shells/chrome/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "React Developer Tools + BananaSlug",
+  "name": "React Developer Tools",
   "description": "Adds React debugging tools to the Chrome Developer Tools.",
-  "version": "0.14.6",
+  "version": "0.15",
   "minimum_chrome_version": "43",
   "icons": {
     "48": "icons/icon48.png",
