--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "repository": "facebook/react-devtools",
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
-    "test": "node --harmony ./node_modules/.bin/jest --verbose",
+    "test": "node --harmony ./node_modules/.bin/jest",
     "typecheck": "flow check"
   },
   "jest": {
@@ -26,6 +26,7 @@
       "es6",
       "js"
     ],
+    "testRunner": "<rootDir>/node_modules/jest-cli/src/testRunners/jasmine/jasmine2.js",
     "moduleFileExtensions": [
       "js",
       "json",
@@ -40,7 +41,7 @@
     "eslint": "^1.5.1",
     "eslint-plugin-react": "^3.5.0",
     "flow-bin": "0.18.1",
-    "jest-cli": "^0.7.1",
+    "jest-cli": "0.8.2",
     "json-loader": "^0.5.2",
     "node-libs-browser": "^0.5.2",
     "webpack": "^1.9.10"
