--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "dependencies": {
+    "babel-core": "6.3.21",
+    "babel-eslint": "4.1.6",
+    "babel-jest": "6.0.1",
+    "babel-loader": "6.2.0",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
     "babel-preset-stage-0": "6.3.13",
     "classnames": "2.2.1",
     "es6-symbol": "3.0.2",
+    "eslint": "1.10.3",
+    "eslint-plugin-react": "3.12.0",
     "fbjs": "0.5.1",
     "fbjs-scripts": "0.5.0",
+    "flow-bin": "0.20.1",
     "immutable": "3.7.6",
+    "jest-cli": "0.8.2",
+    "json-loader": "0.5.4",
+    "node-libs-browser": "0.5.3",
     "object-assign": "4.0.1",
     "react": "0.14.3",
     "react-addons-create-fragment": "0.14.3",
-    "react-dom": "0.14.3"
+    "react-dom": "0.14.3",
+    "webpack": "1.12.9"
   },
   "license": "BSD-3-Clause",
   "repository": "facebook/react-devtools",
@@ -32,18 +43,5 @@
       "json",
       "es6"
     ]
-  },
-  "devDependencies": {
-    "babel-core": "6.3.21",
-    "babel-eslint": "4.1.6",
-    "babel-jest": "6.0.1",
-    "babel-loader": "6.2.0",
-    "eslint": "1.10.3",
-    "eslint-plugin-react": "3.12.0",
-    "flow-bin": "0.20.1",
-    "jest-cli": "0.8.2",
-    "json-loader": "0.5.4",
-    "node-libs-browser": "0.5.3",
-    "webpack": "1.12.9"
   }
 }
