--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "fbjs-scripts": "0.5.0",
     "flow-bin": "0.21.0",
     "immutable": "3.7.6",
-    "jest-cli": "0.8.2",
+    "jest-cli": "0.9.0-fb2",
     "json-loader": "0.5.4",
     "node-libs-browser": "0.5.3",
     "object-assign": "4.0.1",
