--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,12 @@ script:
   - npm run lint
   - flow check
   - npm test
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+
