--- a/shells/electron/package.json
+++ b/shells/electron/package.json
@@ -1,9 +1,11 @@
 {
   "main": "./index.js",
   "scripts": {
-    "build": "../../node_modules/.bin/webpack --config webpack.backend.js && ../../node_modules/.bin/webpack --config webpack.config.js"
+    "build": "../../node_modules/.bin/webpack --config webpack.backend.js && ../../node_modules/.bin/webpack --config webpack.config.js",
+    "start": "electron ."
   },
   "dependencies": {
+    "electron-prebuilt": "^1.4.2",
     "ws": "1.1.0"
   }
 }
