Devtools for everyone!!!
Just add `<script src="http://localhost:8097"></script>` to the top of any
html file, and magically debug the react running there. (swap out your
network-local IP for `localhost` for pages not on your machine)

This works for:
- iframes
- safari
- mobile safari/chrome/whatever
- embedded webviews
- like anything

Test Plan:
- `npm run build` in `/shells/electron`
- then `npm start`

Add the script tag to the top of an html file.
Load the html file anywhere.
Debug to your heart's content.

--- a/shells/electron/package.json
+++ b/shells/electron/package.json
@@ -1,7 +1,10 @@
 {
   "main": "./index.js",
   "scripts": {
-    "build": "../../node_modules/.bin/webpack --config webpack.backend.js && ../../node_modules/.bin/webpack --config webpack.config.js",
+    "backend": "../../node_modules/.bin/webpack --config webpack.backend.js",
+    "ui": "../../node_modules/.bin/webpack --config webpack.config.js",
+    "ui:watch": "../../node_modules/.bin/webpack --config webpack.config.js --watch",
+    "build": "npm run backend && npm run ui",
     "start": "electron ."
   },
   "dependencies": {
