--- a/.flowconfig
+++ b/.flowconfig
@@ -1,5 +1,6 @@
 [ignore]
 .*/react/node_modules/.*
+.*/electron/node_modules/.*
 .*node_modules/babel.*
 .*node_modules/classnames.*
 .*node_modules/json-loader.*
