Enable multiprocess mode in Firefox
Fixes #429.

--- a/shells/firefox/package.json
+++ b/shells/firefox/package.json
@@ -10,6 +10,7 @@
   },
   "license": "BSD-3-Clause",
   "permissions": {
-    "private-browsing": true
+    "private-browsing": true,
+    "multiprocess": true
   }
 }
