--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "license": "BSD-3-Clause",
   "repository": "facebook/react-devtools",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint .",
+    "lint": "eslint .",
     "test": "node --harmony ./node_modules/.bin/jest",
     "typecheck": "flow check"
   },
