Set up Lerna and move Electron shell to packages/

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,6 @@
-/node_modules
-/test/build
-/shells/chrome/build
-/shells/firefox/build
-/shells/firefox/data/build
-/shells/electron/build
-/shells/electron/node_modules
 /shells/chrome.crx
 /shells/chrome.pem
-/shells/plain/build
-/plugins/node_modules
-/backend/integration/node_modules
-/backend/integration/v0.11/node_modules
-/backend/integration/v0.12/node_modules
-/backend/integration/v0.13/node_modules
-/backend/integration/v0.14/node_modules
-/backend/integration/build
 /shells/firefox/*.xpi
+build
+node_modules
 npm-debug.log
-/package/index.html
-/package/index.js
-/package/build
-/package/node_modules
