--- a/packages/react-devtools-core/package.json
+++ b/packages/react-devtools-core/package.json
@@ -14,9 +14,10 @@
   ],
   "scripts": {
     "backend": "NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.backend.js",
-    "standalone": "NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.config.js",
-    "standalone:watch": "NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.config.js --watch",
-    "build": "npm run backend && npm run standalone"
+    "embed": "NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.embed.js",
+    "standalone": "NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.standalone.js",
+    "standalone:watch": "NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.standalone.js --watch",
+    "build": "npm run backend && npm run embed && npm run standalone"
   },
   "author": "Jared Forsyth",
   "license": "BSD-3-Clause",
