[Electron] Add vendor to package.json

--- a/packages/react-devtools-core/package.json
+++ b/packages/react-devtools-core/package.json
@@ -10,7 +10,8 @@
   "files": [
     "build",
     "index.js",
-    "standalone.js"
+    "standalone.js",
+    "vendor"
   ],
   "scripts": {
     "backend": "NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.backend.js",
