--- a/packages/react-devtools-core/package.json
+++ b/packages/react-devtools-core/package.json
@@ -14,16 +14,17 @@
     "vendor"
   ],
   "scripts": {
-    "backend": "NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.backend.js",
-    "backend:watch": "NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.backend.js --watch",
-    "standalone": "NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.standalone.js",
-    "standalone:watch": "NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.standalone.js --watch",
+    "backend": "cross-env NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.backend.js",
+    "backend:watch": "cross-env NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.backend.js --watch",
+    "standalone": "cross-env NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.standalone.js",
+    "standalone:watch": "cross-env NODE_ENV=production ../../node_modules/.bin/webpack --config webpack.standalone.js --watch",
     "build": "npm run backend && npm run standalone",
     "prepublish": "npm run build"
   },
   "author": "Jared Forsyth",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "cross-env": "^3.1.4",
     "ws": "^2.0.3"
   }
 }
