Include icon in the npm package

--- a/packages/react-devtools/package.json
+++ b/packages/react-devtools/package.json
@@ -13,7 +13,8 @@
     "bin.js",
     "app.html",
     "app.js",
-    "index.js"
+    "index.js",
+    "icons"
   ],
   "scripts": {
     "start": "./bin.js"
