Move cross-env to devDependencies for react-devtools-core

--- a/packages/react-devtools-core/package.json
+++ b/packages/react-devtools-core/package.json
@@ -24,7 +24,9 @@
   "author": "Jared Forsyth",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "cross-env": "^3.1.4",
     "ws": "^2.0.3"
+  },
+  "devDependencies": {
+    "cross-env": "^3.1.4"
   }
 }
