--- a/.flowconfig
+++ b/.flowconfig
@@ -13,6 +13,7 @@
 flow
 
 [options]
+esproposal.class_instance_fields=enable
 suppress_comment=\\(.\\|\n\\)*\\$FlowFixMe
 suppress_comment=\\(.\\|\n\\)*\\$FlowIssue
 
