--- a/shells/chrome/manifest.json
+++ b/shells/chrome/manifest.json
@@ -4,12 +4,16 @@
   "description": "Adds React debugging tools to the Chrome Developer Tools.",
   "version": "2.1.0",
   "minimum_chrome_version": "43",
-  "browser_action": {
-    "default_icon": "icons/icon48.png"
-  },
   "icons": {
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
+  },
+
+  "browser_action": {
+    "default_icon": {
+      "48": "icons/icon48-gray.png"
+    },
+    "default_popup": "popups/not-detected.html"
   },
 
   "devtools_page": "main.html",
