--- a/.flowconfig
+++ b/.flowconfig
@@ -2,7 +2,9 @@
 .*/react/node_modules/.*
 .*/electron/node_modules/.*
 .*node_modules/babel.*
+.*node_modules/browserify-zlib/.*
 .*node_modules/classnames.*
+.*node_modules/invariant/.*
 .*node_modules/json-loader.*
 .*node_modules/json5.*
 .*node_modules/node-libs-browser.*
