--- a/shells/chrome/manifest.json
+++ b/shells/chrome/manifest.json
@@ -35,7 +35,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["build/inject.js"],
+      "js": ["build/GlobalHook.js"],
       "run_at": "document_start"
     }
   ]
