--- a/shells/chrome/manifest.json
+++ b/shells/chrome/manifest.json
@@ -5,14 +5,20 @@
   "version": "2.1.4",
   "minimum_chrome_version": "43",
   "icons": {
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/16-production.png",
+    "32": "icons/32-production.png",
+    "48": "icons/48-production.png",
+    "128": "icons/128-production.png"
   },
 
   "browser_action": {
     "default_icon": {
-      "48": "icons/icon48-gray.png"
+      "16": "icons/16-disabled.png",
+      "32": "icons/32-disabled.png",
+      "48": "icons/48-disabled.png",
+      "128": "icons/128-disabled.png"
     },
+
     "default_popup": "popups/not-detected.html"
   },
 
