--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "flow-bin": "0.23.0",
     "immutable": "3.7.6",
     "jest-cli": "0.9.0-fb2",
-    "js-transfer": "^1.0.0",
+    "jsan": "^3.1.8",
     "json-loader": "0.5.4",
     "node-libs-browser": "0.5.3",
     "object-assign": "4.0.1",
