--- a/packages/react-devtools-core/package.json
+++ b/packages/react-devtools-core/package.json
@@ -24,7 +24,7 @@
   "author": "Jared Forsyth",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "js-transfer": "^1.0.0",
+    "jsan": "^3.1.8",
     "shell-quote": "^1.6.1",
     "ws": "^2.0.3"
   },
