--- a/packages/react-devtools/package.json
+++ b/packages/react-devtools/package.json
@@ -25,6 +25,7 @@
     "cross-spawn": "^5.0.1",
     "electron": "^1.4.15",
     "ip": "^1.1.4",
+    "minimist": "^1.2.0",
     "react-devtools-core": "^2.1.9",
     "update-notifier": "^2.1.0"
   }
