--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-addons-create-fragment": "15.4.2",
     "react-color": "^2.11.7",
     "react-dom": "15.4.2",
+    "react-portal": "^3.1.0",
     "webpack": "1.12.9"
   },
   "license": "BSD-3-Clause",
