--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "2.3.0",
   "dependencies": {
     "babel-core": "6.3.21",
     "babel-eslint": "6.0.4",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "fs-extra": "^3.0.1",
     "lerna": "2.0.0-beta.36"
   }
 }
