--- a/shells/firefox/manifest.json
+++ b/shells/firefox/manifest.json
@@ -4,7 +4,12 @@
   "description": "Adds React debugging tools to the Chrome Developer Tools.",
   "version": "2.3.1",
 
-  "minimum_chrome_version": "43",
+  "applications": {
+    "gecko": {
+      "id": "extension@react.devtools",
+      "strict_min_version": "54.0"
+    }
+  },
 
   "icons": {
     "16": "icons/16-production.png",
