--- a/shells/firefox/manifest.json
+++ b/shells/firefox/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "React Developer Tools",
-  "description": "Adds React debugging tools to the Chrome Developer Tools.",
+  "description": "Adds React debugging tools to the Firefox Developer Tools.",
   "version": "2.3.1",
 
   "applications": {
