--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-stage-0": "6.3.13",
     "child-process-promise": "^2.2.1",
     "classnames": "2.2.1",
+    "cli-spinners": "^1.0.0",
     "clipboard-js": "^0.3.3",
     "es6-symbol": "3.0.2",
     "eslint": "2.10.2",
