Firefox WebExtension (and themeName support) (#802)
* Delete old Firefox add-ons directory
* Move Chrome extension to new shells/webextension directory
* Replace old build script with new Node script that can generate both Firefox and Chrome web extensions (npm run build:extension)
* Add support for Firefox theme mirroring

--- a/shells/firefox/manifest.json
+++ b/shells/firefox/manifest.json
@@ -1,10 +1,15 @@
 {
   "manifest_version": 2,
   "name": "React Developer Tools",
-  "description": "Adds React debugging tools to the Chrome Developer Tools.",
+  "description": "Adds React debugging tools to the Firefox Developer Tools.",
   "version": "2.3.3",
 
-  "minimum_chrome_version": "43",
+  "applications": {
+    "gecko": {
+      "id": "extension@react.devtools",
+      "strict_min_version": "54.0"
+    }
+  },
 
   "icons": {
     "16": "icons/16-production.png",
