--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "adm-zip": "^0.4.7",
     "babel-core": "6.3.21",
     "babel-eslint": "6.0.4",
     "babel-jest": "6.0.1",
@@ -7,7 +8,9 @@
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
     "babel-preset-stage-0": "6.3.13",
+    "child-process-promise": "^2.2.1",
     "classnames": "2.2.1",
+    "cli-spinners": "^1.0.0",
     "clipboard-js": "^0.3.3",
     "es6-symbol": "3.0.2",
     "eslint": "2.10.2",
@@ -15,9 +18,11 @@
     "fbjs": "0.5.1",
     "fbjs-scripts": "0.7.0",
     "flow-bin": "0.23.0",
+    "fs-extra": "^3.0.1",
     "immutable": "3.7.6",
     "jest-cli": "0.9.0-fb2",
     "json-loader": "0.5.4",
+    "log-update": "^2.0.0",
     "node-libs-browser": "0.5.3",
     "object-assign": "4.0.1",
     "raw-loader": "^0.5.1",
@@ -31,6 +36,9 @@
   "license": "BSD-3-Clause",
   "repository": "facebook/react-devtools",
   "scripts": {
+    "build:extension": "npm run build:extension:chrome && npm run build:extension:firefox",
+    "build:extension:chrome": "node ./shells/chrome/build",
+    "build:extension:firefox": "node ./shells/firefox/build",
     "lint": "eslint .",
     "postinstall": "lerna bootstrap",
     "test": "node --harmony ./node_modules/.bin/jest",
