Moved theme preview page to gh-pages
This seemed a safer choice, if for no other reason than everyone with Git permissions can easily update the site using the new 'npm run deploy' task.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fbjs-scripts": "0.7.0",
     "flow-bin": "0.23.0",
     "fs-extra": "^3.0.1",
+    "gh-pages": "^1.0.0",
     "immutable": "3.7.6",
     "jest-cli": "0.9.0-fb2",
     "json-loader": "0.5.4",
@@ -39,6 +40,7 @@
     "build:extension": "npm run build:extension:chrome && npm run build:extension:firefox",
     "build:extension:chrome": "node ./shells/chrome/build",
     "build:extension:firefox": "node ./shells/firefox/build",
+    "deploy": "cd ./shells/theme-preview && ./build.sh && gh-pages -d .",
     "lint": "eslint .",
     "postinstall": "lerna bootstrap",
     "test": "node --harmony ./node_modules/.bin/jest",
