--- a/.flowconfig
+++ b/.flowconfig
@@ -4,6 +4,7 @@
 .*node_modules/babel.*
 .*node_modules/browserify-zlib/.*
 .*node_modules/classnames.*
+.*node_modules/gh-pages/.*
 .*node_modules/invariant/.*
 .*node_modules/json-loader.*
 .*node_modules/json5.*
