Renabed not-detected.html to disabled.html This way it resets correctly when the DevTools icon has been reset on page navigation.

--- a/shells/firefox/manifest.json
+++ b/shells/firefox/manifest.json
@@ -26,7 +26,7 @@
       "128": "icons/128-disabled.png"
     },
 
-    "default_popup": "popups/not-detected.html"
+    "default_popup": "popups/disabled.html"
   },
 
   "devtools_page": "main.html",
