--- a/shells/chrome/manifest.json
+++ b/shells/chrome/manifest.json
@@ -21,7 +21,7 @@
       "128": "icons/128-disabled.png"
     },
 
-    "default_popup": "popups/not-detected.html"
+    "default_popup": "popups/disabled.html"
   },
 
   "devtools_page": "main.html",
