--- a/shells/firefox/manifest.json
+++ b/shells/firefox/manifest.json
@@ -6,7 +6,7 @@
 
   "applications": {
     "gecko": {
-      "id": "extension@react.devtools",
+      "id": "@react-devtools",
       "strict_min_version": "54.0"
     }
   },
