Added new 'test:chrome' and 'test:firefox' Npm scripts to speed up local development. These scripts open a browser to a specific URL (the ReactJS homepage) with the local extension installed and enabled.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "lint": "eslint .",
     "postinstall": "lerna bootstrap",
     "test": "node --harmony ./node_modules/.bin/jest",
+    "test:chrome": "node ./shells/chrome/test",
+    "test:firefox": "node ./shells/firefox/test",
     "typecheck": "flow check"
   },
   "jest": {
@@ -63,6 +65,8 @@
     ]
   },
   "devDependencies": {
+    "chrome-launch": "^1.1.4",
+    "firefox-profile": "^1.0.2",
     "lerna": "2.0.0-beta.36"
   }
 }
