--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "deploy": "cd ./shells/theme-preview && ./build.sh && gh-pages -d .",
     "lint": "eslint .",
     "postinstall": "lerna bootstrap",
+    "start:firefox": "web-ext run -s shells/firefox/build/unpacked",
     "test": "node --harmony ./node_modules/.bin/jest",
     "test:chrome": "node ./shells/chrome/test",
     "test:firefox": "node ./shells/firefox/test",
@@ -69,6 +70,7 @@
   "devDependencies": {
     "chrome-launch": "^1.1.4",
     "firefox-profile": "^1.0.2",
-    "lerna": "2.0.0-beta.36"
+    "lerna": "2.0.0-beta.36",
+    "web-ext": "^1.10.1"
   }
 }
