--- a/.flowconfig
+++ b/.flowconfig
@@ -12,6 +12,7 @@
 .*node_modules/node-libs-browser.*
 .*node_modules/webpack.*
 .*node_modules/fbjs/flow.*
+.*node_modules/web-ext.*
 
 [libs]
 flow
