Make the browser action popup look a bit better
- Enable `browser_style` for Firefox 48+
  https://developer.mozilla.org/en-US/Add-ons/WebExtensions/manifest.json/browser_action#Syntax

- Set consistent body and text spacing

- Set the width of `<hr>` to 100% for Firefox compatibility

- Replace unnecessary link opener JavaScript with `target=“_blank”`

--- a/shells/firefox/manifest.json
+++ b/shells/firefox/manifest.json
@@ -26,7 +26,8 @@
       "128": "icons/128-disabled.png"
     },
 
-    "default_popup": "popups/disabled.html"
+    "default_popup": "popups/disabled.html",
+    "browser_style": true
   },
 
   "devtools_page": "main.html",
