--- a/.flowconfig
+++ b/.flowconfig
@@ -21,6 +21,7 @@ flow
 esproposal.class_instance_fields=enable
 suppress_comment=\\(.\\|\n\\)*\\$FlowFixMe
 suppress_comment=\\(.\\|\n\\)*\\$FlowIssue
+suppress_comment=\\(.\\|\n\\)*\\$FlowIgnore
 
 [version]
 0.64.0
