--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "json-loader": "0.5.4",
     "log-update": "^2.0.0",
     "node-libs-browser": "0.5.3",
+    "nullthrows": "^1.0.0",
     "object-assign": "4.0.1",
     "raw-loader": "^0.5.1",
     "react": "15.4.2",
