Upgrade to Flow 66 (#977)
* Flow 23 -> 64

* Remove invalid trailing comma

* Add $FlowFixMe to all failing lines

* Update typings for agent/

* Update typings for backend/

* Update typings for frontend/Themes/

* Update typings for frontend/detail_pane/

* Update typings for remainder of frontend/

* Update typings for plugins/DepGraph/

* Update typings for plugins/ReactNativeStyle/

* Update typings for plugins/Relay/

* Update typings for plugins/TraceUpdates/

* Update typings for shells/

* Flow 23 -> 64

* Remove invalid trailing comma

* Add $FlowFixMe to all failing lines

* Update typings for agent/

* Update typings for backend/

* Update typings for frontend/Themes/

* Update typings for frontend/detail_pane/

* Update typings for remainder of frontend/

* Update typings for plugins/DepGraph/

* Update typings for plugins/ReactNativeStyle/

* Update typings for plugins/Relay/

* Update typings for plugins/TraceUpdates/

* Update typings for shells/

* Flow 66

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint-plugin-react": "5.1.1",
     "fbjs": "0.5.1",
     "fbjs-scripts": "0.7.0",
-    "flow-bin": "0.23.0",
+    "flow-bin": "0.66.0",
     "fs-extra": "^3.0.1",
     "gh-pages": "^1.0.0",
     "immutable": "3.7.6",
@@ -25,6 +25,7 @@
     "json-loader": "0.5.4",
     "log-update": "^2.0.0",
     "node-libs-browser": "0.5.3",
+    "nullthrows": "^1.0.0",
     "object-assign": "4.0.1",
     "raw-loader": "^0.5.1",
     "react": "15.4.2",
