--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "babel-eslint": "6.0.4",
     "babel-jest": "22.1.0",
     "babel-loader": "6.2.0",
-    "babel-preset-es2015": "6.3.13",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "6.3.13",
     "babel-preset-stage-0": "6.3.13",
     "child-process-promise": "^2.2.1",
