Copy all level props for ‘Copy element props’ feature

--- a/shells/firefox/manifest.json
+++ b/shells/firefox/manifest.json
@@ -43,7 +43,8 @@
   "permissions": [
     "file:///*",
     "http://*/*",
-    "https://*/*"
+    "https://*/*",
+    "clipboardWrite"
   ],
 
   "content_scripts": [
