Removed react-addons-create-fragment dependency and usage

--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "object-assign": "4.0.1",
     "raw-loader": "^0.5.1",
     "react": "15.4.2",
-    "react-addons-create-fragment": "15.4.2",
     "react-color": "^2.11.7",
     "react-dom": "15.4.2",
     "react-portal": "^3.1.0",
@@ -38,10 +37,11 @@
   "license": "BSD-3-Clause",
   "repository": "facebook/react-devtools",
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "build:extension":
-      "yarn run build:extension:chrome && yarn run build:extension:firefox",
+    "build:extension": "yarn run build:extension:chrome && yarn run build:extension:firefox",
     "build:extension:chrome": "node ./shells/chrome/build",
     "build:extension:firefox": "node ./shells/firefox/build",
     "build:standalone": "cd packages/react-devtools-core && yarn run build",
@@ -55,7 +55,9 @@
     "typecheck": "flow check"
   },
   "jest": {
-    "modulePathIgnorePatterns": ["<rootDir>/shells"]
+    "modulePathIgnorePatterns": [
+      "<rootDir>/shells"
+    ]
   },
   "devDependencies": {
     "chrome-launch": "^1.1.4",
