Not re-constructing the full tree anymore. Too hacky. Just using the mounted tree.

--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
   "license": "BSD-3-Clause",
   "repository": "facebook/react-devtools",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["packages/*"],
   "scripts": {
-    "build:extension": "yarn run build:extension:chrome && yarn run build:extension:firefox",
+    "build:extension":
+      "yarn run build:extension:chrome && yarn run build:extension:firefox",
     "build:extension:chrome": "node ./shells/chrome/build",
     "build:extension:firefox": "node ./shells/firefox/build",
     "build:standalone": "cd packages/react-devtools-core && yarn run build",
+    "build:example": "cd ./test/example && ./build.sh",
     "deploy": "cd ./shells/theme-preview && ./build.sh && gh-pages -d .",
     "lint": "eslint .",
     "test": "jest",
@@ -56,9 +56,7 @@
     "typecheck": "flow check"
   },
   "jest": {
-    "modulePathIgnorePatterns": [
-      "<rootDir>/shells"
-    ]
+    "modulePathIgnorePatterns": ["<rootDir>/shells"]
   },
   "devDependencies": {
     "chrome-launch": "^1.1.4",
