--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-libs-browser": "0.5.3",
     "nullthrows": "^1.0.0",
     "object-assign": "4.0.1",
+    "prop-types": "^15.6.1",
     "raw-loader": "^0.5.1",
     "react": "^16.4.1",
     "react-color": "^2.11.7",
