ProfilerTab settings are saved between sessions using chrome.storage.local()

--- a/shells/chrome/manifest.json
+++ b/shells/chrome/manifest.json
@@ -37,7 +37,8 @@
   "permissions": [
     "file:///*",
     "http://*/*",
-    "https://*/*"
+    "https://*/*",
+    "storage"
   ],
 
   "content_scripts": [
