Added missing babel-jest plugin

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "adm-zip": "^0.4.7",
+    "babel-core": "^7.0.0-bridge",
     "babel-eslint": "6",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "child-process-promise": "^2.2.1",
     "classnames": "2.2.1",
