--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cli-spinners": "^1.0.0",
     "clipboard-js": "^0.3.3",
     "css-loader": "^1.0.1",
+    "error-stack-parser": "^2.0.2",
     "es6-symbol": "3.0.2",
     "eslint": "2.10.2",
     "eslint-plugin-react": "5.1.1",
@@ -33,9 +34,9 @@
     "nullthrows": "^1.0.0",
     "object-assign": "4.0.1",
     "prop-types": "^15.6.1",
-    "react": "^16.6.3",
+    "react": "^16.7.0-alpha.2",
     "react-color": "^2.11.7",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0-alpha.2",
     "react-portal": "^3.1.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.1.1",
